--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,7 @@ jobs:
             rpm -ivh http://dl.fedoraproject.org/pub/epel/6/i386/epel-release-6-8.noarch.rpm
             yum install ansible -y
             ansible --version
+            ansible -m setup localhost
       - run:
           name: Test roles
           command: |
