--- a/tests/test.yml
+++ b/tests/test.yml
@@ -1,8 +1,8 @@
 ---
 - hosts: localhost
   remote_user: root
-  vars:
-  orangesys_url: 'demo.i.orangesys.io'
-  orangesys_jwt_token: 'jwt-token'
+
   roles:
-    - role: ../..
+    - {role: ../..,
+        orangesys_url: 'demo.i.orangesys.io',
+        orangesys_jwt_token: 'jwt-token'}
