--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2
 
 references:
-  container_config:
+  container_config: &container_config
     test_roles: &test_roles
       run:
         name: test ansible playbook
