--- a/tests/test.yml
+++ b/tests/test.yml
@@ -3,6 +3,4 @@
   remote_user: root
 
   roles:
-    - {role: ../..,
-        orangesys_url: 'demo.i.orangesys.io',
-        orangesys_jwt_token: '{{ jwt-token }}'}
+    - role: ../..
