--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ references:
         command: |
           echo "orangesys_url: 'demo.i.orangesys.io'" >> defaults/main.yml
           echo "orangesys_jwt_token: '$ORANGESYS_JWT_TOKEN'" >> defaults/main.yml
-          ansible-playbook -i "localhost," -c local ./tests/test.yml -v
+          ansible-playbook -i "localhost," -c local ./tests/test-circleci.yml -v
 jobs:
   centos6:
     <<: *container_config
