--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,8 @@ env:
 
 script:
   # Download test shim.
-  - echo "orangesys_url: 'demo.i.orangesys.io'" >> defaults/main.yml
-  - echo "orangesys_jwt_token: '$ORANGESYS_JWT_TOKEN'" >> defaults/main.yml
+  - echo 'orangesys_url: "demo.i.orangesys.io"' >> defaults/main.yml
+  - echo 'orangesys_jwt_token: '$ORANGESYS_JWT_TOKEN"' >> defaults/main.yml
   - wget -O ${PWD}/tests/test.sh https://gist.githubusercontent.com/geerlingguy/73ef1e5ee45d8694570f334be385e181/raw/
   - chmod +x ${PWD}/tests/test.sh
 
